# governor_webui

./: .gitignore  ARCHITECTURE.md  COMPAT.md  Dockerfile  LICENSE  NOTICE  PROVENANCE.md  README.md  docker-compose.build.yml  docker-compose.claude-code.yml  docker-compose.codex.yml  docker-compose.ollama.yml  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  start-codex.sh  start.sh  sync-deps.sh
.github/workflows/: publish-image.yml
demos/: playwright.config.ts  run-webui-demos.sh
docs/: API.md  artifact-hierarchy-vnext.md
src/gov_webui/: __init__.py  adapter.py  artifact_store.py  daemon_client.py  desk_adapter.py  project_store.py  style_policy.py  summaries.py
src/gov_webui/static/: dashboard.html  desk.html  governor.html  index.html
tests/: conftest.py  test_adapter.py  test_artifact_store.py  test_code_builder_smoke.py  test_dashboard_v2_api.py  test_desk_routes.py  test_intent_api.py  test_parity.py  test_project_store.py  test_research_builder_smoke.py  test_shell_client.py  test_style_policy.py  test_summaries.py
tools/screenshots/: README.md  playwright.config.ts  seed.sh  shots.spec.ts
tools/screenshots/fixtures/: research_demo.json
