[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gov-webui"
version = "0.4.0"
description = "Phosphor - user-facing governed agent client for Agent Governor"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "James Beck"}
]
dependencies = [
    "agent-governor >= 0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "anthropic>=0.30.0",
]
keywords = [
    "ai",
    "llm",
    "governance",
    "webui",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
governor-webui = "gov_webui.adapter:main"

[project.urls]
Homepage = "https://github.com/unpingable/governor_webui"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gov_webui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 60
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",
]
ignore = [
    "F401",
    "F821",
    "F841",
]
